// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden profiles — pack fields > bakery pack draft is stable 1`] = `
[
  "ph_hair=true",
  "ph_jewellery=true",
  "ph_nails=true",
  "ph_cuts=true",
  "ph_illness=true",
  "ph_uniform=true",
  "ph_clothing=We provide uniforms, which staff wash at home. Staff put on clean clothing at the start of each shift.",
  "ph_changing=Staff change in the staff room and keep outdoor clothes and bags in lockers, away from food areas.",
  "cl_single_use=true",
  "cl_method=We use single-use cloths and paper towels, thrown away after each task.",
  "sf_raw_separate=true",
  "rte_separate=true",
  "rte_stored=true",
  "sf_colour_boards=true",
  "sf_equipment=true",
  "rte_utensils=true",
  "sf_storage=Raw meat, fish and eggs are stored covered on the bottom shelf, below ready-to-eat food.",
  "fa_matrix=true",
  "fa_communication=true",
  "fa_aware=true",
  "fa_procedure=We keep allergen information for every dish in Blueroll and update it whenever a recipe or ingredient changes. Staff ask customers about allergies and check the allergen chart before serving. Allergen orders are prepared with clean equipment and kept separate.",
  "cp_chemicals=true",
  "cp_chemicals_desc=Cleaning chemicals are kept in a dedicated cupboard away from food, in their original labelled containers.",
  "cp_glass=true",
  "cp_physical=true",
  "cp_describe=No glass is used above open food; breakages are cleaned up and nearby food thrown away. Packaging, staples and string are removed before food enters the kitchen.",
  "pc_contract=true",
  "pc_proofing=true",
  "pc_measures=A pest control contractor visits regularly and reports are kept. Staff check daily for signs of pests and report them to the manager at once.",
  "hw_basin=true",
  "hw_soap=true",
  "hw_towels=true",
  "hw_when=true",
  "ce_sanitiser=true",
  "ce_contact=true",
  "ce_surfaces=true",
  "cc_clear=true",
  "cc_spills=true",
  "cc_waste=true",
  "cc_method=Staff clear and clean surfaces and equipment straight after each task, clean spills at once and remove waste regularly through the shift.",
  "cs_schedule=true",
  "st_labelled=true",
  "st_rotation=true",
  "sc_fifo=true",
  "sc_reject=true",
  "sc_dates=true",
  "sc_delivery=true",
  "df_fridge=true",
  "ec_eggs=true",
  "ec_procedure=Eggs: cooked until white and yolk are solid, or pasteurised egg is used for dishes served raw or lightly cooked.",
  "oc_opening=true",
  "oc_closing=true",
  "oc_recorded=true",
  "sup_approved=We only buy from reputable suppliers who are registered with their local authority, and we check deliveries on arrival.",
  "tr_induction=true",
  "dd_kept=true",
]
`;

exports[`golden profiles — pack fields > coffee_shop pack draft is stable 1`] = `
[
  "ph_hair=true",
  "ph_jewellery=true",
  "ph_nails=true",
  "ph_cuts=true",
  "ph_illness=true",
  "ph_uniform=true",
  "ph_clothing=We provide uniforms, which staff wash at home. Staff put on clean clothing at the start of each shift.",
  "ph_changing=Staff change in the staff room and keep outdoor clothes and bags in lockers, away from food areas.",
  "cl_single_use=true",
  "cl_method=We use single-use cloths and paper towels, thrown away after each task.",
  "sf_storage=We do not handle raw meat, fish or eggs. Ready-to-eat food is stored covered.",
  "fa_matrix=true",
  "fa_communication=true",
  "fa_aware=true",
  "fa_procedure=We keep allergen information for every dish in Blueroll and update it whenever a recipe or ingredient changes. Staff ask customers about allergies and check the allergen chart before serving. Allergen orders are prepared with clean equipment and kept separate.",
  "cp_chemicals=true",
  "cp_chemicals_desc=Cleaning chemicals are kept in a dedicated cupboard away from food, in their original labelled containers.",
  "cp_glass=true",
  "cp_physical=true",
  "cp_describe=No glass is used above open food; breakages are cleaned up and nearby food thrown away. Packaging, staples and string are removed before food enters the kitchen.",
  "pc_contract=true",
  "pc_proofing=true",
  "pc_measures=A pest control contractor visits regularly and reports are kept. Staff check daily for signs of pests and report them to the manager at once.",
  "hw_basin=true",
  "hw_soap=true",
  "hw_towels=true",
  "hw_when=true",
  "ce_sanitiser=true",
  "ce_contact=true",
  "ce_surfaces=true",
  "cc_clear=true",
  "cc_spills=true",
  "cc_waste=true",
  "cc_method=Staff clear and clean surfaces and equipment straight after each task, clean spills at once and remove waste regularly through the shift.",
  "cs_schedule=true",
  "st_labelled=true",
  "st_rotation=true",
  "sc_fifo=true",
  "sc_reject=true",
  "sc_dates=true",
  "sc_delivery=true",
  "oc_opening=true",
  "oc_closing=true",
  "oc_recorded=true",
  "sup_approved=We only buy from reputable suppliers who are registered with their local authority, and we check deliveries on arrival.",
  "tr_induction=true",
  "dd_kept=true",
]
`;

exports[`golden profiles — pack fields > restaurant pack draft is stable 1`] = `
[
  "ph_hair=true",
  "ph_jewellery=true",
  "ph_nails=true",
  "ph_cuts=true",
  "ph_illness=true",
  "ph_uniform=true",
  "ph_clothing=We provide uniforms, which staff wash at home. Staff put on clean clothing at the start of each shift.",
  "ph_changing=Staff change in the staff room and keep outdoor clothes and bags in lockers, away from food areas.",
  "cl_single_use=true",
  "cl_method=We use single-use cloths and paper towels, thrown away after each task.",
  "sf_raw_separate=true",
  "rte_separate=true",
  "rte_stored=true",
  "sf_colour_boards=true",
  "sf_equipment=true",
  "rte_utensils=true",
  "sf_storage=Raw meat, fish and eggs are stored covered on the bottom shelf, below ready-to-eat food.",
  "fa_matrix=true",
  "fa_communication=true",
  "fa_aware=true",
  "fa_procedure=We keep allergen information for every dish in Blueroll and update it whenever a recipe or ingredient changes. Staff ask customers about allergies and check the allergen chart before serving. Allergen orders are prepared with clean equipment and kept separate.",
  "cp_chemicals=true",
  "cp_chemicals_desc=Cleaning chemicals are kept in a dedicated cupboard away from food, in their original labelled containers.",
  "cp_glass=true",
  "cp_physical=true",
  "cp_describe=No glass is used above open food; breakages are cleaned up and nearby food thrown away. Packaging, staples and string are removed before food enters the kitchen.",
  "pc_proofing=true",
  "pc_measures=We check weekly for signs of pests and record it in Blueroll. Any sign of pests is reported to the manager and a contractor is called.",
  "hw_basin=true",
  "hw_soap=true",
  "hw_towels=true",
  "hw_when=true",
  "ce_sanitiser=true",
  "ce_contact=true",
  "ce_surfaces=true",
  "cc_clear=true",
  "cc_spills=true",
  "cc_waste=true",
  "cc_method=Staff clear and clean surfaces and equipment straight after each task, clean spills at once and remove waste regularly through the shift.",
  "cs_schedule=true",
  "st_labelled=true",
  "st_rotation=true",
  "sc_fifo=true",
  "sc_reject=true",
  "sc_dates=true",
  "sc_delivery=true",
  "cd_fridge=true",
  "df_fridge=true",
  "ck_probe=true",
  "hh_check=true",
  "rh_once=true",
  "rh_check=true",
  "rh_procedure=Food is reheated until steaming hot all the way through and the core reaches 75 °C, checked with a probe. Food is reheated only once.",
  "ec_eggs=true",
  "ec_rice=true",
  "ec_procedure=Eggs: cooked until white and yolk are solid, or pasteurised egg is used for dishes served raw or lightly cooked. Rice: served straight after cooking, or cooled within 1 hour and kept in the fridge for no more than 1 day.",
  "mc_new_dishes=Before a new dish goes on the menu the chef checks how it is cooked and probed, and the allergen information is added to Blueroll.",
  "oc_opening=true",
  "oc_closing=true",
  "oc_recorded=true",
  "sup_approved=We only buy from reputable suppliers who are registered with their local authority, and we check deliveries on arrival.",
  "tr_induction=true",
  "tp_calibrated=true",
  "tp_boil_ice=true",
  "dd_kept=true",
]
`;

exports[`golden profiles — pack fields > takeaway pack draft is stable 1`] = `
[
  "ph_hair=true",
  "ph_jewellery=true",
  "ph_nails=true",
  "ph_cuts=true",
  "ph_illness=true",
  "ph_uniform=true",
  "ph_clothing=We provide uniforms, which staff wash at home. Staff put on clean clothing at the start of each shift.",
  "ph_changing=Staff change in the staff room and keep outdoor clothes and bags in lockers, away from food areas.",
  "cl_single_use=true",
  "cl_method=We use single-use cloths and paper towels, thrown away after each task.",
  "sf_raw_separate=true",
  "rte_separate=true",
  "rte_stored=true",
  "sf_colour_boards=true",
  "sf_equipment=true",
  "rte_utensils=true",
  "sf_storage=Raw meat, fish and eggs are stored covered on the bottom shelf, below ready-to-eat food.",
  "fa_matrix=true",
  "fa_communication=true",
  "fa_aware=true",
  "fa_procedure=We keep allergen information for every dish in Blueroll and update it whenever a recipe or ingredient changes. Staff ask customers about allergies and check the allergen chart before serving. Allergen orders are prepared with clean equipment and kept separate.",
  "cp_chemicals=true",
  "cp_chemicals_desc=Cleaning chemicals are kept in a dedicated cupboard away from food, in their original labelled containers.",
  "cp_glass=true",
  "cp_physical=true",
  "cp_describe=No glass is used above open food; breakages are cleaned up and nearby food thrown away. Packaging, staples and string are removed before food enters the kitchen.",
  "pc_contract=true",
  "pc_proofing=true",
  "pc_measures=A pest control contractor visits regularly and reports are kept. Staff check daily for signs of pests and report them to the manager at once.",
  "hw_basin=true",
  "hw_soap=true",
  "hw_towels=true",
  "hw_when=true",
  "ce_sanitiser=true",
  "ce_contact=true",
  "ce_surfaces=true",
  "cc_clear=true",
  "cc_spills=true",
  "cc_waste=true",
  "cc_method=Staff clear and clean surfaces and equipment straight after each task, clean spills at once and remove waste regularly through the shift.",
  "cs_schedule=true",
  "st_labelled=true",
  "st_rotation=true",
  "sc_fifo=true",
  "sc_reject=true",
  "sc_dates=true",
  "sc_delivery=true",
  "df_fridge=true",
  "df_microwave=true",
  "ck_probe=true",
  "hh_check=true",
  "rh_once=true",
  "rh_check=true",
  "rh_procedure=Food is reheated until steaming hot all the way through and the core reaches 75 °C, checked with a probe. Food is reheated only once.",
  "ec_rice=true",
  "ec_procedure=Rice: served straight after cooking, or cooled within 1 hour and kept in the fridge for no more than 1 day.",
  "mc_new_dishes=Before a new dish goes on the menu the chef checks how it is cooked and probed, and the allergen information is added to Blueroll.",
  "oc_opening=true",
  "oc_closing=true",
  "oc_recorded=true",
  "sup_approved=We only buy from reputable suppliers who are registered with their local authority, and we check deliveries on arrival.",
  "tr_induction=true",
  "tp_calibrated=true",
  "tp_boil_ice=true",
  "dd_kept=true",
]
`;
